SE-15248 Add MultiSelectEntityParameter for entity multi-selects with autocomplete
Job parameters so far only supported multi-selects over a fixed list of
string options (MultiSelectStringParameter) or single-entity selection
with autocomplete (EntityParameter). This adds a base class for selecting
multiple entities via autocomplete routes, needed e.g. to restrict export
jobs to a set of linked entities.

New:
* MultiSelectEntityParameter: multi-select parameter for BaseEntity
  values. Uses an Autocompleter or a custom autocomplete URI for
  suggestions, serializes the selection as "|"-delimited entity ids and
  renders only the currently selected entities as preselected options
  (suggestions are provided at runtime via the autocomplete). Falls back
  to the plural label of the entity descriptor if no label is given.
* EntityParameterUtil: extracted the mechanics shared between
  EntityParameter and MultiSelectEntityParameter (autocompleter
  resolution, descriptor/mapper access, entity lookup incl. the
  "mustExist" error and the tenant access check). Both parameter types
  cannot share a base class due to incompatible value types (single
  entity vs. list), therefore the shared logic lives in this util which
  both delegate to. Parameter callbacks are passed as method references
  so that overrides in subclasses are picked up. The public/protected
  API of EntityParameter remains unchanged.

Changed:
* MultiSelectParameter now owns the complete "|"-encoding: it implements
  checkAndTransformValue (accepting both form value lists and already
  encoded strings) and resolveFromString, subclasses only implement
  checkAndTransformSingleValue / resolveSingleValueFromString for a
  single value. The contract is documented: return null to silently skip
  meaningless values, throw a HandledException whenever dropping a value
  would silently change the meaning of the job.
* MultiSelectParameter#computeValueUpdate now emits a [{value, text}]
  array for all multi-selects